[gd_scene load_steps=13 format=3 uid="uid://rlmrr75ugptl"]

[ext_resource type="Texture2D" uid="uid://cxqjrwv0ymiwx" path="res://assets/Sprites/4 - Robo Pumpkin/Walking (16 x 16).png" id="1_dm566"]
[ext_resource type="Texture2D" uid="uid://wxdosbl76oqj" path="res://assets/Sprites/4 - Robo Pumpkin/Standing (16 x 16).png" id="1_v81o3"]
[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_wvqd6"]
[ext_resource type="Texture2D" uid="uid://dij4fonj3lio6" path="res://assets/Sprites/4 - Robo Pumpkin/Hurt (16 x 16).png" id="2_ewxsq"]
[ext_resource type="PackedScene" uid="uid://db3ansgtdl7gr" path="res://resources/prefabs/hitbox.tscn" id="5_4ey83"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_t2dqy"]
radius = 4.0
height = 12.0

[sub_resource type="Animation" id="Animation_aq00b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_dm566")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_vp8ln"]
resource_name = "hurt"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_ewxsq")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_nju5u"]
resource_name = "standing"
length = 0.1
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_v81o3")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_8je0q"]
resource_name = "walk"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_dm566")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kbvtx"]
_data = {
"RESET": SubResource("Animation_aq00b"),
"hurt": SubResource("Animation_vp8ln"),
"standing": SubResource("Animation_nju5u"),
"walk": SubResource("Animation_8je0q")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m1crf"]
size = Vector2(10, 2)

[node name="enemy" type="CharacterBody2D" groups=["enemies"]]
position = Vector2(0, -8)
collision_layer = 4
collision_mask = 2
script = ExtResource("1_wvqd6")

[node name="texture" type="Sprite2D" parent="."]
texture = ExtResource("1_dm566")
hframes = 2

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_t2dqy")

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "walk"
speed_scale = 0.35
libraries = {
"": SubResource("AnimationLibrary_kbvtx")
}

[node name="wall_detector" type="RayCast2D" parent="."]
target_position = Vector2(-7, 0)
collision_mask = 6

[node name="floor_detector" type="RayCast2D" parent="."]
target_position = Vector2(-15, 10)
collision_mask = 6

[node name="hitbox" parent="." instance=ExtResource("5_4ey83")]

[node name="collision" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_m1crf")

[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
